--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Example React application integrated with AWS Cognito</title>
-    <meta name="description" content="Example React application showing integration with AWS Cognito, using the built-in sign-up and sign-in content from Cognito and a React router callback endpoint. Uses React Redux to store, manage and dispatch changes to the logged in user. Written by Arron Harden.">
-    <meta name="keywords" content="React,redux,cognito,aws,amazon web services,nodejs,bearer,jwt,oauth,Arron Harden">
+    <meta name="description" content="Example React application showing integration with AWS Cognito, using the built-in sign-up and sign-in content from Cognito and a React router callback endpoint.">
+    <meta name="keywords" content="React,redux,cognito,aws,amazon web services,nodejs,bearer,jwt,oauth">
     </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
